Updated README.md and style.css ; updated navbar issue and resolution to issue and resolution section of README.md., updated color and font-size of the navbar-light .navbar-nav .nav-link class to #00050a and 0.75em to make nav items easily visible to users..

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,7 @@ body{
     font-family: "Yusei Magic", sans-serif;
     font-size: 1rem;
     line-height: 1.5;
-    color: #333;
+    /* color: #333; */
     overflow-x: hidden;
 }
 
@@ -15,6 +15,12 @@ body{
 .bg-light {
   background-color: #24537005 !important;
   z-index: 2;
+}
+
+.navbar-light .navbar-nav .nav-link {
+    color: #00050a;
+    font-size: 1.5em;
+    margin-left: 0.75em;
 }
 
 #logo{
